--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -83,6 +83,7 @@ button:focus { outline: none; }
 .tm-icon { 
 	color: white;
 	margin-bottom: 30px;
+	margin-top: 
 }
 
 .tm-site-name {
@@ -115,7 +116,9 @@ button:focus { outline: none; }
 	max-width: none;
 	width: 100%;
 }
-.tm-textbox-1-col { max-width: 600px; }
+.tm-textbox-1-col {
+	max-width: 800px;
+}
 
 .cd-hero-slider .tm-text { 
 	font-size: 1em;
@@ -128,7 +131,7 @@ button:focus { outline: none; }
 }
 
 .tm-2-col-textbox { 
-	max-width: 600px; 
+	max-width: 800px; 
 	-webkit-flex: 0 1 auto; 
 	    -ms-flex: 0 1 auto; 
 	        flex: 0 1 auto; /* Fix flexbox in IE 10 bug https://philipwalton.com/articles/normalizing-cross-browser-flexbox-bugs/ */
@@ -185,7 +188,7 @@ button:focus { outline: none; }
 }
 
 .tm-copyright-text { 
-	margin-top: 20px; 
+	margin-top: 5px; 
 	text-align: center;
 }
 
@@ -210,7 +213,7 @@ button:focus { outline: none; }
 .tm-img-gallery {
 	max-width: 800px;
 	margin: 10px auto 0;
-	width: 740px;		
+	width: 800px;		
 }
 
 .tm-img {
@@ -348,7 +351,7 @@ border-top-color: #f9c922; -webkit-animation: spin 1.5s linear infinite; /* Chro
 }
 
 .cd-hero-slider.small-screen { height: 100%; }
-.cd-hero-slider .js-tm-page-content.tm-page-1 { margin-top: 70px; }
+.cd-hero-slider .js-tm-page-content.tm-page-1 { margin-top: 10px; }
 
 /* Media Queries */
 @media only screen and (min-width: 720px) {
@@ -359,16 +362,16 @@ border-top-color: #f9c922; -webkit-animation: spin 1.5s linear infinite; /* Chro
 				flex-direction: row; 
 	}
 
-	.tm-copyright-text { margin-top: 0; }
+	.tm-copyright-text { margin-top: 0px; }
 }
 
 @media only screen and (min-width: 465px) {
-	.cd-hero-slider .js-tm-page-content.tm-page-1 { margin-top: 100px; }	
+	.cd-hero-slider .js-tm-page-content.tm-page-1 { margin-top: -50px; }	
 }
 
 @media only screen and (min-width: 768px) {
 
-	.cd-hero-slider .js-tm-page-content.tm-page-1 { margin-top: 120px; }
+	.cd-hero-slider .js-tm-page-content.tm-page-1 { margin-top: -50px; }
 
 	.navbar-nav .nav-item {	float: left; }
 
